@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: Mono - using the new JIT compiler
+Description: Mono Runtime using the new JIT compiler.
+Version: @VERSION@
+Requires: glib-2.0 gmodule-2.0
+Libs: -L${libdir} -lmini @libmono_ldflags@ -lm
+Cflags: -I${includedir} @libmono_cflags@
